Fix calendar view layout issues (IE)
Fixes RM-18941

--- a/axelor-web/src/main/webapp/css/view.calendar.css
+++ b/axelor-web/src/main/webapp/css/view.calendar.css
@@ -30,6 +30,7 @@
 
 .calendar-main {
   flex: 1;
+  height: 100%;
 }
 
 .calendar-side {
